--- a/index.html
+++ b/index.html
@@ -604,42 +604,45 @@
           <a class="mobile-menu__link" href="#">Контакти</a>
         </li>
       </ul>
-      <ul class="mobile-cont">
-        <li class="mobile-cont__item">
-          <a
-            class="mobile-cont__tel"
-            href="tel:+380961111111"
-            aria-label="Телефон"
-          >
-            +38 096 111 11 11</a
-          >
-        </li>
-        <li class="mobile-cont__item">
-          <a
-            class="mobile-cont__mail"
-            href="mailto:info@devstudio.com"
-            aria-label="Почта"
-          >
-            info@devstudio.com</a
-          >
-        </li>
-      </ul>
+      <div class="position__cont-social">
+        <ul class="mobile-cont">
+          <li class="mobile-cont__item">
+            <a
+              class="mobile-cont__tel"
+              href="tel:+380961111111"
+              aria-label="Телефон"
+            >
+              +38 096 111 11 11</a
+            >
+          </li>
+          <li class="mobile-cont__item">
+            <a
+              class="mobile-cont__mail"
+              href="mailto:info@devstudio.com"
+              aria-label="Почта"
+            >
+              info@devstudio.com</a
+            >
+          </li>
+        </ul>
 
-      <ul class="mobile-social">
-        <li class="mobile-social__item">
-          <a class="mobile-social__link" href="#">Instagram</a>
-        </li>
-        <li class="mobile-social__item">
-          <a class="mobile-social__link" href="#">Twitter</a>
-        </li>
-        <li class="mobile-social__item">
-          <a class="mobile-social__link" href="#">Facebook</a>
-        </li>
-        <li class="mobile-social__item">
-          <a class="mobile-social__link" href="#">LinkedIn</a>
-        </li>
-      </ul>
+        <ul class="mobile-social">
+          <li class="mobile-social__item">
+            <a class="mobile-social__link" href="#">Instagram</a>
+          </li>
+          <li class="mobile-social__item">
+            <a class="mobile-social__link" href="#">Twitter</a>
+          </li>
+          <li class="mobile-social__item">
+            <a class="mobile-social__link" href="#">Facebook</a>
+          </li>
+          <li class="mobile-social__item">
+            <a class="mobile-social__link" href="#">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
     </div>
+
     <!-- Модальное окно -->
     <div data-modal class="backdrop is-hidden">
       <div class="modal">
