--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <svg
               width="40"
               height="40"
-              aria-label="Переключатьель мобильного меню"
+              aria-label="Переключатель мобильного меню"
             >
               <use
                 class="icon-menu"
